--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
   "name": "bluenet",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "homepage": "https://github.com/dobots/bluenet-lib-js",
   "description": "bluetooth le library for crownstones and dobeacons",
-  "main": "./ble.js",
+  "main": "./ble_base.js",
   "keywords": [
     "bluetoothle",
     "crownstone",
