--- a/plugin.xml
+++ b/plugin.xml
@@ -1,10 +1,10 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="nl.dobots.bluenet" version="0.0.3" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="nl.dobots.bluenet" version="0.0.4" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
 	<name>BlueNet</name>
 	<description>Library to interface with bluetooth devices running BlueNet</description>
 	<license>LGPL v3+, Apache, or MIT, your choice</license>
 	<keywords>bluetooth,bluenet</keywords>
-	<js-module name="BlueNet" src="www/BlueNet.js">
+	<js-module name="BlueNet" src="www/bluenet.js">
 		<clobbers target="cordova.plugins.BlueNet" />
 	</js-module>
 	<platform name="android">
